Minor tweaks, improve consistency and appearance.

--- a/wp-content/models/518/index.html
+++ b/wp-content/models/518/index.html
@@ -76,7 +76,7 @@
                     <label class="openness" for="openState">
                         <input type="checkbox" id="openState" checked onclick="playAnimation()">
                         <span class="slider round"></span>
-                    </label> <span class="display-label">Hinge Opened</span>
+                    </label> <span class="display-label">Open</span>
 
                 </div>
 
