--- a/wp-content/models/index.html
+++ b/wp-content/models/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta
       name="viewport"
@@ -22,7 +22,18 @@
           <div id="loadingScreen" class="loadingScreen">
             <div id="loadingBar" class="loadingBar"></div>
             <div class="loading-gif">
-              <img src="public/loading.gif" />
+              <div class="loading">
+                <div class="loading__letter">L</div>
+                <div class="loading__letter">o</div>
+                <div class="loading__letter">a</div>
+                <div class="loading__letter">d</div>
+                <div class="loading__letter">i</div>
+                <div class="loading__letter">n</div>
+                <div class="loading__letter">g</div>
+                <div class="loading__letter">.</div>
+                <div class="loading__letter">.</div>
+                <div class="loading__letter">.</div>
+              </div>
             </div>
           </div>
           <canvas id="modelDisplay" class="modelDisplay"></canvas>
@@ -37,7 +48,9 @@
                       xsi:schemaLocation="https://www.w3.org/2000/svg/ ">
                 <path
                         fill="#FFF"
-                        d="M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z"
+                        d="M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1
+                        16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448
+                        0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z"
                 />
               </svg>
             </div>
