Refactor code for 518 to reduce size and button labels

--- a/wp-content/models/518/index.html
+++ b/wp-content/models/518/index.html
@@ -64,7 +64,7 @@
                     <label class="switch" for="woodState">
                         <input type="checkbox" id="woodState" checked onclick="woodBlockState()">
                         <span class="slider round"></span>
-                    </label> <span class="display-label">Wood Enclosure</span>
+                    </label> <span class="display-label">Installed</span>
 
                 </div>
 
